--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 @import "../sass/components/animations.scss";
 @import "../sass/components/loader.scss";
 @import "../sass/utils/keyframes.scss";
+@import "../sass/components/loader.scss";
 @import "../sass/components/boutons.scss";
 @import "../sass/layouts/header.scss";
 @import "../sass/components/lieu.scss";
