--- a/sass/components/_boutons.scss
+++ b/sass/components/_boutons.scss
@@ -6,11 +6,20 @@
     color: white;
     background: linear-gradient(357deg, $primaire ,$secondaire);
     border: none;
-    box-shadow: $box-shadow;
+    box-shadow: $boutton-shadow;
     border-radius: 25vw;
+    &:hover{
+        box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+        background: linear-gradient(357deg, #a16be0 ,#ff93e1);
+    }
     @include tablette-only{
         font-size: 3.5vw;
         width: 49vw;
+    }
+    @include desktop-only{
+        font-size: 1.1vw;
+        width: 15vw;
+        height: 3vw;
     }
 }
 /* BOUTTON PAGE RESTAURANT */
@@ -21,11 +30,17 @@
     color: white;
     background: linear-gradient(357deg, $primaire ,$secondaire);
     border: none;
-    box-shadow: $box-shadow;
+    box-shadow: $boutton-shadow;
     border-radius: 25vw;
     margin-top: 6vw;
+    &:hover{
+        box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+        background: linear-gradient(357deg, #a16be0 ,#ff93e1);
+    }
     @include tablette-only{
-        font-size: 3.7vw;
-        width: 38vw;
+        margin-top: 3vw;
+        font-size: 1.1vw;
+        width: 15vw;
+        height: 3vw;
     }
 }
