--- a/sass/components/_fonctionnement.scss
+++ b/sass/components/_fonctionnement.scss
@@ -4,12 +4,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include desktop-only{
+        flex-direction: row;
+        height: 10vw;
+    }
     h2{
         text-align: left;
         width: 90vw;
         font-size: $titre-section;
         @include tablette-only{
         width: 50vw;
+        }
+        @include desktop-only{
+            font-size: 1.8vw;
+            margin-left: 5vw;
+            width: 38vw;
         }
     }
     &__div{
@@ -26,6 +35,15 @@
             width: 72vw;
             height: 14vw;
             border-radius: 4.5vw;
+        }
+        @include desktop-only{
+            font-size: 1.2vw;
+            width: 30vw;
+            height: 4vw;
+            margin-right: 5vw;
+            border-radius: 1.5vw;
+            margin-bottom: 0;
+            box-shadow: 0vw 0.1vw 1.5vw 0.2vw rgb(224, 222, 222);
         }
         @include hover-fonctionnement;
     }
@@ -45,6 +63,13 @@
             width: 5.6vw;
             height: 5.6vw;
         }
+        @include desktop-only{
+            width: 2vw;
+            height: 2vw;
+            font-size: 1vw;
+            margin-right: 1vw;
+            margin-left: -0.9vw;
+        }
     }
     i{
         margin-right: 5vw;
@@ -52,11 +77,18 @@
         @include tablette-only{
             font-size: 4.2vw;
         }
+        @include desktop-only{
+            font-size: 1.2vw;
+            margin-right: 1vw;
+        }
     }
     p{
         font-size: 5vw;
         @include tablette-only{
             font-size: 4.2vw;
+        }
+        @include desktop-only{
+            font-size: 1.2vw;
         }
     }
 }
