--- a/sass/components/_lieu.scss
+++ b/sass/components/_lieu.scss
@@ -5,23 +5,39 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include desktop-only{
+        height: 22vw;
+    }
     &__header{
         background-color: $gris-foncer;
         width: 100%;
         height: 13vw;
         display: flex;
         flex-direction: row;
+        justify-content: center;
         box-shadow: inset 0vw 3vw 1vw -2vw rgb(204, 204, 204);
+        @include desktop-only{
+            height: 4vw;
+            box-shadow: inset 0vw 2vw 2vw -2vw rgb(204, 204, 204);
+        }
     }
     &__header i{
         font-size: 4.4vw;
         margin-right: 4.5vw;
-        margin-left: 28vw;
         margin-top: 4.6vw;
+        @include desktop-only{
+            font-size: 1.2vw;
+            margin-top: 1.35vw;
+            margin-right: 1.3vw
+        }
     }
     &__header p{
         @include roboto;
         font-size: 4.4vw;
+        @include desktop-only{
+            font-size: 1.2vw;
+            margin-top: 1.3vw;
+        }
     }
     &__body{
         width: 80vw;
@@ -42,11 +58,21 @@
         @include tablette-only{
             font-size: 5.8vw;
         }
+        @include desktop-only{
+            margin-top: 2vw;
+            margin-bottom: 0.5vw;
+            font-size: 2vw;
+        }
     }
     &__body p{
         font-size: 4.5vw;
         margin-top: 0;
         margin-bottom: 7vw;
+        @include desktop-only{
+            width: 30vw;
+            font-size: 1.5vw;
+            margin-bottom: 3vw;
+        }
     }
     
 }
