--- a/sass/pages/_body.scss
+++ b/sass/pages/_body.scss
@@ -5,6 +5,7 @@ body{
 /* RESTAURANT */
 .restaurant-body-img{
     width: 100%;
-    height: 65vw;
-    object-fit: cover;
+    height: 93.7vw;
+    object-fit:cover;
+    position: absolute;
 }
