--- a/sass/pages/restaurant/_plats.scss
+++ b/sass/pages/restaurant/_plats.scss
@@ -13,6 +13,12 @@
         @include tablette-only{
             height: 17vw;
         }
+        @include desktop-only{
+            height: 5vw;
+            border-radius: 1.5vw;
+            width: 30vw;
+            margin-bottom: 0.8vw;
+        }
     }
     @for $i from 1 through 10 {
         .delay-#{$i}{
@@ -27,6 +33,10 @@
         @include tablette-only{
             font-size: 4vw;
         }
+        @include desktop-only{
+            font-size: 1vw;
+            margin-left: 2vw;
+        }
     }
     .plat__text h3{
         margin-top: 4vw;
@@ -36,6 +46,11 @@
         @include tablette-only{
             font-size: 4vw;
             margin-top: 2vw;
+        }
+        @include desktop-only{
+            font-size: 1vw;
+           margin-top: 0.9vw;
+           margin-bottom: 0.5vw;
         }
     }
     .plat__text p{
@@ -50,6 +65,12 @@
         @include tablette-only{
             font-size: 4vw;
             margin-top: 9vw;
+        }
+        @include desktop-only{
+            font-size: 1vw;
+            margin-top: 2vw;
+            margin-right: 1vw;
+            margin-left: 0;
         }
     }
     @include confirmation-plat;
