--- a/sass/utils/keyframes.scss
+++ b/sass/utils/keyframes.scss
@@ -7,3 +7,16 @@
         transform: scale(1);
     }
 }
+@keyframes loader{
+    100%{
+        z-index: -10;
+    }
+}
+@keyframes loader-rond{
+    from{
+        transform: rotate(0);
+    }
+    to{
+        transform: rotate(3turn);
+    }
+}
