--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,47 +14,125 @@
   animation: loader 12s forwards;
 }
 .loader__contenaire {
-  width: 10vw;
-  height: 10vw;
+  width: 15vw;
+  height: 15vw;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .loader__contenaire .rond-1 {
-  width: 4vw;
-  height: 4vw;
-  border-top: 0.4vw solid #99E2D0;
-  border-left: 0.4vw solid transparent;
-  border-right: 0.4vw solid transparent;
-  border-bottom: 0.4vw solid transparent;
+  width: 10vw;
+  height: 10vw;
+  border-top: 0.8vw solid #99E2D0;
+  border-left: 0.8vw solid transparent;
+  border-right: 0.8vw solid transparent;
+  border-bottom: 0.8vw solid transparent;
   position: absolute;
   border-radius: 100%;
   animation: loader-rond 3s;
   animation-delay: 0.4s;
 }
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-1 {
+    border-left: 0.6vw solid transparent;
+    border-right: 0.6vw solid transparent;
+    border-bottom: 0.6vw solid transparent;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-1 {
+    border-left: 0.3vw solid transparent;
+    border-right: 0.3vw solid transparent;
+    border-bottom: 0.3vw solid transparent;
+  }
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-1 {
+    border-top: 0.6vw solid #99E2D0;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-1 {
+    width: 6vw;
+    height: 6vw;
+    border-top: 0.3vw solid #99E2D0;
+  }
+}
 .loader__contenaire .rond-2 {
-  width: 2.4vw;
-  height: 2.4vw;
-  border-top: 0.4vw solid #FF79DA;
-  border-left: 0.4vw solid transparent;
-  border-right: 0.4vw solid transparent;
-  border-bottom: 0.4vw solid transparent;
+  width: 6.2vw;
+  height: 6.2vw;
+  border-top: 0.8vw solid #FF79DA;
+  border-left: 0.8vw solid transparent;
+  border-right: 0.8vw solid transparent;
+  border-bottom: 0.8vw solid transparent;
   position: absolute;
   border-radius: 100%;
   animation: loader-rond 3s;
   animation-delay: 0.55s;
 }
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-2 {
+    border-left: 0.6vw solid transparent;
+    border-right: 0.6vw solid transparent;
+    border-bottom: 0.6vw solid transparent;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-2 {
+    border-left: 0.3vw solid transparent;
+    border-right: 0.3vw solid transparent;
+    border-bottom: 0.3vw solid transparent;
+  }
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-2 {
+    border-top: 0.6vw solid #FF79DA;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-2 {
+    width: 3.8vw;
+    height: 3.8vw;
+    border-top: 0.3vw solid #FF79DA;
+  }
+}
 .loader__contenaire .rond-3 {
-  width: 0.7vw;
-  height: 0.7vw;
-  border-top: 0.4vw solid #9356DC;
-  border-left: 0.4vw solid transparent;
-  border-right: 0.4vw solid transparent;
-  border-bottom: 0.4vw solid transparent;
+  width: 2.5vw;
+  height: 2.5vw;
+  border-top: 0.8vw solid #9356DC;
+  border-left: 0.8vw solid transparent;
+  border-right: 0.8vw solid transparent;
+  border-bottom: 0.8vw solid transparent;
   position: absolute;
   border-radius: 100%;
   animation: loader-rond 3s;
   animation-delay: 0.65s;
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-3 {
+    border-left: 0.6vw solid transparent;
+    border-right: 0.6vw solid transparent;
+    border-bottom: 0.6vw solid transparent;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-3 {
+    border-left: 0.3vw solid transparent;
+    border-right: 0.3vw solid transparent;
+    border-bottom: 0.3vw solid transparent;
+  }
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-3 {
+    border-top: 0.3vw solid #9356DC;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-3 {
+    width: 1.6vw;
+    height: 1.6vw;
+    border-top: 0.3vw solid #9356DC;
+  }
 }
 
 @keyframes pop {
@@ -91,47 +169,125 @@
   animation: loader 12s forwards;
 }
 .loader__contenaire {
-  width: 10vw;
-  height: 10vw;
+  width: 15vw;
+  height: 15vw;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .loader__contenaire .rond-1 {
-  width: 4vw;
-  height: 4vw;
-  border-top: 0.4vw solid #99E2D0;
-  border-left: 0.4vw solid transparent;
-  border-right: 0.4vw solid transparent;
-  border-bottom: 0.4vw solid transparent;
+  width: 10vw;
+  height: 10vw;
+  border-top: 0.8vw solid #99E2D0;
+  border-left: 0.8vw solid transparent;
+  border-right: 0.8vw solid transparent;
+  border-bottom: 0.8vw solid transparent;
   position: absolute;
   border-radius: 100%;
   animation: loader-rond 3s;
   animation-delay: 0.4s;
 }
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-1 {
+    border-left: 0.6vw solid transparent;
+    border-right: 0.6vw solid transparent;
+    border-bottom: 0.6vw solid transparent;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-1 {
+    border-left: 0.3vw solid transparent;
+    border-right: 0.3vw solid transparent;
+    border-bottom: 0.3vw solid transparent;
+  }
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-1 {
+    border-top: 0.6vw solid #99E2D0;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-1 {
+    width: 6vw;
+    height: 6vw;
+    border-top: 0.3vw solid #99E2D0;
+  }
+}
 .loader__contenaire .rond-2 {
-  width: 2.4vw;
-  height: 2.4vw;
-  border-top: 0.4vw solid #FF79DA;
-  border-left: 0.4vw solid transparent;
-  border-right: 0.4vw solid transparent;
-  border-bottom: 0.4vw solid transparent;
+  width: 6.2vw;
+  height: 6.2vw;
+  border-top: 0.8vw solid #FF79DA;
+  border-left: 0.8vw solid transparent;
+  border-right: 0.8vw solid transparent;
+  border-bottom: 0.8vw solid transparent;
   position: absolute;
   border-radius: 100%;
   animation: loader-rond 3s;
   animation-delay: 0.55s;
 }
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-2 {
+    border-left: 0.6vw solid transparent;
+    border-right: 0.6vw solid transparent;
+    border-bottom: 0.6vw solid transparent;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-2 {
+    border-left: 0.3vw solid transparent;
+    border-right: 0.3vw solid transparent;
+    border-bottom: 0.3vw solid transparent;
+  }
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-2 {
+    border-top: 0.6vw solid #FF79DA;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-2 {
+    width: 3.8vw;
+    height: 3.8vw;
+    border-top: 0.3vw solid #FF79DA;
+  }
+}
 .loader__contenaire .rond-3 {
-  width: 0.7vw;
-  height: 0.7vw;
-  border-top: 0.4vw solid #9356DC;
-  border-left: 0.4vw solid transparent;
-  border-right: 0.4vw solid transparent;
-  border-bottom: 0.4vw solid transparent;
+  width: 2.5vw;
+  height: 2.5vw;
+  border-top: 0.8vw solid #9356DC;
+  border-left: 0.8vw solid transparent;
+  border-right: 0.8vw solid transparent;
+  border-bottom: 0.8vw solid transparent;
   position: absolute;
   border-radius: 100%;
   animation: loader-rond 3s;
   animation-delay: 0.65s;
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-3 {
+    border-left: 0.6vw solid transparent;
+    border-right: 0.6vw solid transparent;
+    border-bottom: 0.6vw solid transparent;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-3 {
+    border-left: 0.3vw solid transparent;
+    border-right: 0.3vw solid transparent;
+    border-bottom: 0.3vw solid transparent;
+  }
+}
+@media screen and (min-width: 768px) {
+  .loader__contenaire .rond-3 {
+    border-top: 0.3vw solid #9356DC;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .loader__contenaire .rond-3 {
+    width: 1.6vw;
+    height: 1.6vw;
+    border-top: 0.3vw solid #9356DC;
+  }
 }
 
 /* BOUTTON HOME PAGE */
@@ -335,9 +491,14 @@ body {
 /* RESTAURANT */
 .restaurant-body-img {
   width: 100%;
-  height: 93.7vw;
+  height: 60vw;
   object-fit: cover;
-  position: absolute;
+}
+@media screen and (min-width: 1440px) {
+  .restaurant-body-img {
+    position: absolute;
+    height: 93.65vw;
+  }
 }
 
 .fonctionnement {
@@ -346,6 +507,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 @media screen and (min-width: 1440px) {
   .fonctionnement {
@@ -486,7 +648,7 @@ body {
   .restaurant .contenaire-restaurant {
     display: flex;
     flex-wrap: wrap;
-    width: 65vw;
+    width: 95vw;
     justify-content: space-between;
   }
 }
@@ -519,7 +681,7 @@ body {
 }
 @media screen and (min-width: 1440px) {
   .restaurant__div {
-    width: 30vw;
+    width: 22vw;
     height: 19vw;
     border-radius: 1.8vw;
     margin-bottom: 4vw;
