--- a/sass/components/_fonctionnement.scss
+++ b/sass/components/_fonctionnement.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
     @include desktop-only{
         flex-direction: row;
         height: 10vw;
