--- a/sass/pages/_body.scss
+++ b/sass/pages/_body.scss
@@ -5,7 +5,10 @@ body{
 /* RESTAURANT */
 .restaurant-body-img{
     width: 100%;
-    height: 93.7vw;
+    height: 60vw;
     object-fit:cover;
-    position: absolute;
+    @include desktop-only{
+        position: absolute;
+        height: 93.65vw; 
+    }
 }
