--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,11 +7,10 @@
   width: 100%;
   background-color: #ffffffe6;
   display: flex;
-  z-index: 10;
+  z-index: 10000;
   justify-content: center;
   align-items: center;
-  transition: 0.01s;
-  animation: loader 12s forwards;
+  animation: loader 3.5s forwards;
 }
 .loader__contenaire {
   width: 15vw;
@@ -144,7 +143,7 @@
   }
 }
 @keyframes loader {
-  100% {
+  to {
     z-index: -10;
   }
 }
@@ -162,11 +161,10 @@
   width: 100%;
   background-color: #ffffffe6;
   display: flex;
-  z-index: 10;
+  z-index: 10000;
   justify-content: center;
   align-items: center;
-  transition: 0.01s;
-  animation: loader 12s forwards;
+  animation: loader 3.5s forwards;
 }
 .loader__contenaire {
   width: 15vw;
