--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,6 +155,18 @@
     transform: rotate(3turn);
   }
 }
+@keyframes lighten {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.03);
+    background-color: #ade8d9;
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .loader {
   position: fixed;
   height: 100%;
@@ -699,6 +711,7 @@ body {
   font-size: 3.8vw;
   font-weight: 700;
   color: #278870;
+  animation: 1.5s cubic-bezier(0, -0.01, 0.81, 1.75) lighten infinite;
 }
 @media screen and (min-width: 768px) {
   .restaurant .nouveau {
