--- a/sass/components/_restaurant-list.scss
+++ b/sass/components/_restaurant-list.scss
@@ -64,6 +64,7 @@
         font-size: 3.8vw;
         font-weight: 700;
         color: darken($tertiaire, 40);
+        animation: 1.5s cubic-bezier(0,-0.01, 0.81, 1.75) lighten infinite;
         @include tablette-only{
             width: 12vw;
             height: 4vw;
