--- a/sass/utils/keyframes.scss
+++ b/sass/utils/keyframes.scss
@@ -20,3 +20,16 @@
         transform: rotate(3turn);
     }
 }
+@keyframes lighten{
+    0%{
+        transform: scale(1);
+       
+    }
+    50%{
+        transform: scale(1.03);
+        background-color: lighten($tertiaire, 5);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
