--- a/sass/utils/mixins.scss
+++ b/sass/utils/mixins.scss
@@ -36,3 +36,10 @@
             border-bottom: 0.3vw solid transparent;
         }
 }
+@mixin boucle {
+    @for $i from 1 through 10 {
+        .delay-#{$i}{
+            animation-delay: #{$i/10}s;
+        }
+    }
+}
