--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -1,3 +1,13 @@
+.restaurant-body-img{
+    width: 100%;
+    height: 60vw;
+    object-fit:cover;
+    @include desktop-only{
+        position: absolute;
+        height: 99.4vw; 
+        z-index: -2;
+    }
+}
 .presentation{
     background-color: $gris-clair;
     border-radius: 12vw 12vw 0 0;
@@ -78,5 +88,75 @@
             border-bottom: 0.3vw solid $tertiaire;
         }
     }
-    @include plats;
+    .plat{
+        height: 20vw;
+        width: 100%;
+        background-color: white;
+        border-radius: 4.3vw;
+        margin-bottom: 5vw;
+        box-shadow: $box-shadow;
+        display: flex;
+        flex-direction: row;
+        overflow: hidden;
+        @include apparition-card;
+        @include tablette-only{
+            height: 17vw;
+        }
+        @include desktop-only{
+            height: 5vw;
+            border-radius: 1.5vw;
+            width: 30vw;
+            margin-bottom: 0.8vw;
+        }
+    }
+    @include boucle;
+    .plat__text{
+        font-size: $text-plat;
+        margin-left: 3.7vw;
+        width: 70vw;
+        @include ellipsis;
+        @include tablette-only{
+            font-size: 4vw;
+        }
+        @include desktop-only{
+            font-size: 1vw;
+            margin-left: 2vw;
+        }
+    }
+    .plat__text h3{
+        margin-top: 4vw;
+        margin-bottom: 2vw;
+        font-size: 4.7vw;
+        @include ellipsis;
+        @include tablette-only{
+            font-size: 4vw;
+            margin-top: 2vw;
+        }
+        @include desktop-only{
+            font-size: 1vw;
+           margin-top: 0.9vw;
+           margin-bottom: 0.5vw;
+        }
+    }
+    .plat__text p{
+        margin: 0;
+        @include ellipsis;
+        }
+    .plat__prix{
+        font-size: $text-plat;
+        margin-top: 12vw;
+        margin-right: 7vw;
+        margin-left: 8vw;
+        @include tablette-only{
+            font-size: 4vw;
+            margin-top: 9vw;
+        }
+        @include desktop-only{
+            font-size: 1vw;
+            margin-top: 2vw;
+            margin-right: 1vw;
+            margin-left: 0;
+        }
+    }
 }
+    @include confirmation-plat;
