--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,14 +6,11 @@
 @import "../sass/components/loader.scss";
 @import "../sass/components/boutons.scss";
 @import "../sass/layouts/header.scss";
-@import "../sass/components/lieu.scss";
-@import "../sass/pages/body.scss";
-@import "../sass/components/fonctionnement.scss";
-@import "../sass/components/restaurant-list.scss";
+@import "../sass/pages/index.scss";
+@import "../sass/base/page.scss";
+@import "../sass/pages/restaurant/body-restaurant.scss";
 @import "../sass/layouts/footer.scss";
-@import "../sass/pages/restaurant/card.scss";
-@import "../sass/pages/restaurant/plats.scss";
-@import "../sass/pages/restaurant/presentation-plats.scss";
+@import "../sass/pages/restaurants";
 
 
 
