--- a/sass/components/_animations.scss
+++ b/sass/components/_animations.scss
@@ -37,6 +37,9 @@
         transform-origin: right;
         transform: scaleX(0);
         transition: all 0.7s;
+        @include desktop-only{
+            transition: transform 0.5s, width 0.15s;
+        }
     }
     .plat:hover .confirmation{
         transform: scaleX(1);
