--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,6 +311,9 @@
   box-shadow: 0vw 0vw 0.3vw 0.01vw #7a7a7a;
   border-radius: 25vw;
 }
+.boutton:focus {
+  outline: 0;
+}
 .boutton:hover {
   box-shadow: 0vw 0vw 0.5vw 0.01vw #7a7a7a;
   background: linear-gradient(357deg, #a16be0, #ff93e1);
@@ -341,6 +344,9 @@
   border-radius: 25vw;
   margin-top: 6vw;
 }
+.boutton-restaurant:focus {
+  outline: 0;
+}
 .boutton-restaurant:hover {
   box-shadow: 0vw 0vw 0.5vw 0.01vw #7a7a7a;
   background: linear-gradient(357deg, #a16be0, #ff93e1);
@@ -348,9 +354,9 @@
 @media screen and (min-width: 768px) {
   .boutton-restaurant {
     margin-top: 3vw;
-    font-size: 2vw;
-    width: 35vw;
-    height: 6vw;
+    font-size: 3vw;
+    width: 33vw;
+    height: 7vw;
   }
 }
 @media screen and (min-width: 1440px) {
