--- a/sass/components/_boutons.scss
+++ b/sass/components/_boutons.scss
@@ -12,17 +12,25 @@
         outline:0;
     }
     &:hover{
-        box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+        box-shadow: 0vw 0vw 2vw 1vw rgb(122, 122, 122);
         background: linear-gradient(357deg, #a16be0 ,#ff93e1);
     }
     @include tablette-only{
         font-size: 3.5vw;
         width: 49vw;
+        &:hover{
+            box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+            background: linear-gradient(357deg, #a16be0 ,#ff93e1);
+        }
     }
     @include desktop-only{
         font-size: 1.1vw;
         width: 15vw;
         height: 3vw;
+        &:hover{
+            box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+            background: linear-gradient(357deg, #a16be0 ,#ff93e1);
+        }
     }
 }
 /* BOUTTON PAGE RESTAURANT */
@@ -40,7 +48,7 @@
         outline:0;
     }
     &:hover{
-        box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+        box-shadow: 0vw 0vw 2vw 1vw rgb(122, 122, 122);
         background: linear-gradient(357deg, #a16be0 ,#ff93e1);
     }
     @include tablette-only{
@@ -48,11 +56,19 @@
         font-size: 3vw;
         width: 33vw;
         height: 7vw;
+        &:hover{
+            box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+            background: linear-gradient(357deg, #a16be0 ,#ff93e1);
+        }
     }
     @include desktop-only{
         margin-top: 3vw;
         font-size: 1.3vw;
         width: 14vw;
         height: 3vw;
+        &:hover{
+            box-shadow: 0vw 0vw 0.5vw 0.01vw rgb(122, 122, 122);
+            background: linear-gradient(357deg, #a16be0 ,#ff93e1);
+        }
     }
 }
