--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -98,7 +98,7 @@
         display: flex;
         flex-direction: row;
         overflow: hidden;
-        @include apparition-card;
+        animation: pop 1s;
         @include tablette-only{
             height: 17vw;
         }
